--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -4,16 +4,14 @@ stack: jdk 11
 
 branches:
   only:
-    - main
+    - master
 
 build: off
 
+
 install:
-  - java -jar ./artifacts/app-delivery.jar &
-
-
+  - java -jar ./artifacts/app-card-delivery.jar &
 
 build_script:
-
   - chmod +x gradlew
-  - ./gradlew test --info -Dselenide.headless=true
+  - ./gradlew test -Dselenide.headless=true --info
