--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,4 +13,4 @@ install:
 
 build_script:
   - chmod +x gradlew
-  - ./gradlew test --info -Selenide.headless=true --info
+  - ./gradlew test -Selenide.headless=true --info  # запускаем тест
